@@ -10,3 +10,4 @@ t4|0
 t5|t
 ERROR:  Two or more faces found
 ERROR:  Two or more faces found
+ERROR:  Corrupted topology: geometry of edge 14 is EMPTY
