@@ -27,3 +27,4 @@ tt2033|NC|1|POINT Z (0 0 0)
 tt2033|NC|2|POINT Z (0 2 1)
 tt2033|NC|3|POINT Z (0 1 1)
 tt2033.endTopology 't' dropped
+ERROR:  Corrupted topology: geometry of edge 1 is EMPTY
